[package]
name = "rusthello"
version = "0.1.0"
authors = ["samon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# The `alphabetavsminimax` feature is used only for a (long) test to ensure that
# the alphabeta algorithm returns the same results as the minimax for a given
# depth.
alphabetavsminimax = []
